--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,10 +1,66 @@
-/* Pretendard 폰트 설정 - 본사(headquarters) 및 스토어(store) 공통 적용 */
+/* Pretendard 폰트 굵기별 선언 */
 @font-face {
-    font-family: 'Pretendard';
-    src: url('../assets/fonts/woff2-subset/Pretendard-Black.subset.woff2') format('woff2');
-    font-weight: 900;
-    font-style: normal;
-    font-display: swap;
+  font-family: 'Pretendard';
+  src: url('../assets/fonts/woff2-subset/Pretendard-Thin.subset.woff2') format('woff2');
+  font-weight: 100;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/fonts/woff2-subset/Pretendard-ExtraLight.subset.woff2') format('woff2');
+  font-weight: 200;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/fonts/woff2-subset/Pretendard-Light.subset.woff2') format('woff2');
+  font-weight: 300;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/fonts/woff2-subset/Pretendard-Regular.subset.woff2') format('woff2');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/fonts/woff2-subset/Pretendard-Medium.subset.woff2') format('woff2');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/fonts/woff2-subset/Pretendard-SemiBold.subset.woff2') format('woff2');
+  font-weight: 600;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/fonts/woff2-subset/Pretendard-Bold.subset.woff2') format('woff2');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/fonts/woff2-subset/Pretendard-ExtraBold.subset.woff2') format('woff2');
+  font-weight: 800;
+  font-style: normal;
+  font-display: swap;
+}
+@font-face {
+  font-family: 'Pretendard';
+  src: url('../assets/fonts/woff2-subset/Pretendard-Black.subset.woff2') format('woff2');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
 }
 
 /* 본사(headquarters) 전용 폰트 설정 */
@@ -17,14 +73,14 @@
 /* 본사 헤더 폰트 설정 */
 .headquarters-header {
     font-family: 'Pretendard', sans-serif;
-    font-weight: 700; /* Bold */
+    font-weight: 400; /* Bold */
     font-size: 1.25rem; /* 20px */
 }
 
 /* 본사 사이드바 폰트 설정 */
 .headquarters-sidebar {
     font-family: 'Pretendard', sans-serif;
-    font-weight: 500; /* Medium */
+    font-weight: 400; /* Medium */
     font-size: 1rem; /* 16px */
 }
 
